@@ -1,3 +1,10 @@
+2006-10-19  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_area):
+	fixed calculation of display area in preparation of fixing bug #362915.
+
+	* plug-ins/common/whirlpinch.c: removed unused define.
+
 2006-10-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimppropwidgets.[ch]: added
